--- a/Laboratori/Laboratorio 11/my-app/package.json
+++ b/Laboratori/Laboratorio 11/my-app/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "dayjs": "^1.11.7",
+    "express-session": "^1.17.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
