--- a/Laboratori/Laboratorio 11/my-app/package.json
+++ b/Laboratori/Laboratorio 11/my-app/package.json
@@ -12,8 +12,10 @@
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "express-session": "^1.17.3",
+    "passport": "^0.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -25,5 +27,9 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
-  }
+  },
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
